# -

1_lab/: .gitignore  CMakeLists.txt  conf.json  config.conf  main.cpp  readme.txt  readme2.txt  run.sh
1_lab/simple/: CMakeLists.txt  configuration.json  main.cpp
1_lab/src/: loop.hpp  main.cpp  messages.hpp  queue.cpp  queue.hpp  semaphore.hpp  session.hpp  settings.hpp  shared_memory.cpp  shared_memory.hpp
2_lab/: CMakeLists.txt  conanfile.txt  main.cpp  run.sh
2_lab/new/: main.cpp
2_lab/src/: car.hpp  main.cpp  message-queue.hpp  race.hpp
3_lab/matrix/: CMakeLists.txt  main.cpp  matrix-helper.hpp  matrix-simple.cpp  matrix.cpp  optimal.cpp  run.sh
3_lab/mpi-test/: CMakeLists.txt  main.cpp  run.sh
3_lab/race-mpi/: CMakeLists.txt  code.txt  main.cpp  readme.txt  run.sh
4_lab/: CMakeLists.txt  circle.cpp  dependency.cpp  line.cpp  signal.cpp
5_lab/: echo.erl  factorial.erl  fibonacci.erl
